--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="logo.png" alt="AL BATAL GENERAL TRADING LLC">
+                <img src="newlogo.jpg" alt="AL BATAL GENERAL TRADING LLC">
                 <h1>AL BATAL GENERAL TRADING LLC <h1>
             </div>
             <nav>
