--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Us</h2>
-            <p>AL BATAL GENERAL TRADING LLC and MEGA SUPPLY ENGINEERING PVT.LTD.Co AFRICA are leaders in global trading solutions. We specialize in a wide range of industries including petrochemicals, automotive spare parts, real estate, shipping, cargo, coffee, and meat and foodstuffs trading.</p>
+            <p>AL BATAL GENERAL TRADING LLC is a leader in global trading solutions. We specialize in a wide range of industries including petrochemicals, automotive spare parts, real estate, shipping, cargo, coffee, and meat and foodstuffs trading.</p>
             <p>With a commitment to quality and customer satisfaction, our experienced team provides comprehensive solutions tailored to meet the diverse needs of our clients.</p>
         </div>
     </section>
@@ -94,6 +94,65 @@
                     <p>High-quality coffee sourcing and distribution for various markets.</p>
                 </div>
             </div>
+            <div class="service">
+            </div>
+                <img src="machine.jpg" alt="Machines">
+                <div class="service-text">
+                    <h3>Construction and Production machineries</h3>
+                    <p>Providing a range of machineries to various industries worldwide.</p>
+                </div>
+            </div>
+            <div class="service">
+
+            </div>
+                <img src="hospital.jpg" alt="hospital equipments">
+                <div class="service-text">
+                    <h3>Hospital equipments</h3>
+                    <p>Various equipments for Hospitals</p>
+                </div>
+            </div>
+            <div class="service">
+
+            </div>
+                <img src="military.jpg" alt="Tactical uniforms">
+                <div class="service-text">
+                    <h3>Tactical military and police uniforms</h3>
+                    <p>Providing a range of tactical uniforms to militaries and police worldwide.</p>
+                </div>
+            </div>
+            <div class="service">
+
+            </div>
+                <img src="maid.jpg" alt="Maid">
+                <div class="service-text">
+                    <h3>Household workers</h3>
+                    <p>Professional and reliable house maids.</p>
+                </div>
+            </div>
+            <div class="service"></div>
+                <img src="jems.jpg" alt="Gemstones">
+                <div class="service-text">
+                    <h3>Gemstones</h3>
+                    <p>High quality gemstones.</p>
+                </div>
+            </div>
+            <div class="service">
+
+               </div>
+                <img src="iron.jpg" alt="Iron">
+                <div class="service-text">
+                    <h3>High quality iron</h3>
+                    <p>Corrugated and plain galvanized iron sheet and rolls.</p>
+                </div>
+            </div>
+
+            <div class="service"></div>
+            <img src="bike.jpg" alt="Bike">
+            <div class="service-text">
+                <h3>Two wheelers</h3>
+                <p>Variou types of two wheelers.</p>
+            </div>
+        </div>
             <div class="service">
                 <img src="meat.jpeg" alt="Meat and Food Stuffs">
                 <div class="service-text">
