--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </div>
                 <img src="maid.jpg" alt="Maid">
                 <div class="service-text">
-                    <h3>Household workers</h3>
+                    <h3>Household Professionals</h3>
                     <p>Professional and reliable house maids.</p>
                 </div>
             </div>
@@ -173,7 +173,12 @@
                 <li>Automotive</li>
                 <li>Real Estate</li>
                 <li>Shipping and Logistics</li>
-                <li>Food and Beverage</li>
+                <li>Household Professionals</li>
+                <li>Coffee</li>
+                <li>Tactical gear</li>
+                <li>Production and construction machineries</li>
+                <li>Gemstones</li>
+                <li>Hospital equipments</li>
             </ul>
         </div>
     </section>
