--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 AL BATAL GENERAL TRADING LLC | MEGA SUPPLY ENGINEERING PVT.LTD.Co AFRICA</p>
+            <p>&copy; 2024 AL BATAL GENERAL TRADING LLC</p>
             <ul class="footer-links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About Us</a></li>
