--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
             <h2>Latest News & Updates</h2>
             <article>
                 <h3>Company Expansion</h3>
-                <p>We are excited to announce our recent expansion into new markets...</p>
+                <p>We are excited to announce our recent expansion into new markets.</p>
             </article>
             <article>
                 <h3>New Service Launch</h3>
-                <p>Introducing our new range of services designed to meet the growing needs of our clients...</p>
+                <p>Introducing our new range of services designed to meet the growing needs of our clients.</p>
             </article>
         </div>
     </section>
@@ -208,6 +208,11 @@
                 <p><strong>Address:</strong> Near Ajman Thumbay Pharmacy Remc<br> Building floor 5 #504, City, Ajman,UAE</p>
                 <p><strong>Phone:</strong> 054 7330712</p>
                 <p><strong>Email:</strong> generalalabatel@gmail.com</p>
+                
+                <p><strong>Ethiopian branch:</strong> Bunamis Plc.<br> Lideta sub city, Adot building 5th floor,Addis Ababa</p>
+                <p><strong>Phone:</strong> +251 911203181, +251 911260608, +251 911231405</p>
+                <p>Office number: +251 113810022</p>
+                <p><strong>Email:</strong> dunamisplc2023@gmail.com</p>
             </div>
         </div>
     </section>
