--- a/index.html
+++ b/index.html
@@ -163,6 +163,27 @@
                     <p>Various types of two-wheelers.</p>
                 </div>
             </div>
+            <div class="service">
+                <img src="compost.jpg" alt="Bike">
+                <div class="service-text">
+                    <h3>Compost and potting soil</h3>
+                    <p>Quality growing media with micronutrients for any plant.</p>
+                </div>
+            </div>
+            <div class="service">
+                <img src="compostpeach.jpg" alt="Bike">
+                <div class="service-text">
+                    <h3>Urea</h3>
+                    <p>Various types of fertilizers for any agricutural needs.</p>
+                </div>
+            </div>
+            <div class="service">
+                <img src="pressure.jpg" alt="Bike">
+                <div class="service-text">
+                    <h3>Pressure sprayer</h3>
+                    <p>Various types of Pressure sprayers for agriculture.</p>
+                </div>
+            </div>
     
             <!-- Service 15: Meat and Food Stuffs -->
             <div class="service">
