--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <section id="contact" class="section">
         <div class="container">
             <h2>Contact Us</h2> 
-             <p>Emran Gudissa, Chief Executive Officer <br>Yoseph Beyene, Managing Director<br>yosephb2000@gmail.com</p>
+             <p><strong>Emran Gudissa, Chief Executive Officer <br>Yoseph Beyene, Managing Director<br>yosephb2000@gmail.com</strong></p>
             <form>
                 <label for="name">Name</label>
                 <input type="text" id="name" name="name" required>
