--- a/index.html
+++ b/index.html
@@ -185,7 +185,13 @@
                 </div>
             </div>
     
-            <!-- Service 15: Meat and Food Stuffs -->
+             <div class="service">
+                <img src="Screenshot 2024-10-09 220534.png" alt="Grains">
+                <div class="service-text">
+                    <h3>TGrains</h3>
+                    <p>Different grains like kidney beans, sesame seeds, white beans and much more.</p>
+                </div>
+            </div> 
             <div class="service">
                 <img src="meat.jpeg" alt="Meat and Food Stuffs">
                 <div class="service-text">
