--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
              <div class="service">
                 <img src="Screenshot 2024-10-09 220534.png" alt="Grains">
                 <div class="service-text">
-                    <h3>TGrains</h3>
+                    <h3>Grains</h3>
                     <p>Different grains like kidney beans, sesame seeds, white beans and much more.</p>
                 </div>
             </div> 
