--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     
             <!-- Service 4: Real Estate -->
             <div class="service">
-                <img src="home.png" alt="Real Estate">
+                <img src="house.jpg" alt="Real Estate">
                 <div class="service-text">
                     <h3>Real Estate</h3>
                     <p>Expertise in real estate investment, sales, and property management.</p>
@@ -193,7 +193,7 @@
                 </div>
             </div> 
             <div class="service">
-                <img src="meat.jpeg" alt="Meat and Food Stuffs">
+                <img src="meat.jpg" alt="Meat and Food Stuffs">
                 <div class="service-text">
                     <h3>Meat and Food Stuffs</h3>
                     <p>Trading in premium meat and food products with a focus on quality.</p>
