--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
                 </div>
             </div> 
             <div class="service">
-                <img src="meat.jpg" alt="Meat and Food Stuffs">
+                <img src="sheep.jpg" alt="Meat and Food Stuffs">
                 <div class="service-text">
                     <h3>Meat and Food Stuffs</h3>
-                    <p>Trading in premium meat and food products with a focus on quality.</p>
+                    <p>Trading in premium meat like sheep/lamb,beef and more with a focus on quality.</p>
                 </div>
             </div>
         </div>
-    </section>
+                 
     
     <section class="promo-video-section section">
         <div class="container">
