--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </div>
             </div> 
             <div class="service">
-                <img src="sheep.jpg" alt="Meat and Food Stuffs">
+                <img src="sheep.png" alt="Meat and Food Stuffs">
                 <div class="service-text">
                     <h3>Meat and Food Stuffs</h3>
                     <p>Trading in premium meat like sheep/lamb,beef and more with a focus on quality.</p>
